# boson

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml
.github/: CODEOWNERS
.github/workflows/: boson-matrix.yml
.sentrux/: rules.toml
boson/: Cargo.toml  QUALITY.md  README.md
boson-axum/: Cargo.toml  QUALITY.md  README.md
boson-axum/src/: lib.rs  router.rs  state.rs
boson-axum/src/handlers/: config.rs  jobs.rs  mod.rs  response.rs  runs.rs  tasks.rs
boson-axum/tests/: http_api.rs
boson-backend-mem/: Cargo.toml  QUALITY.md  README.md
boson-backend-mem/src/: bootstrap.rs  enqueue_rate.rs  error.rs  jobs.rs  leases.rs  lib.rs  mem_queue_backend.rs  runs.rs  store.rs  task_config.rs
boson-backend-mem/tests/: mem_queue_backend.rs
boson-backend-nats/: Cargo.toml  QUALITY.md  README.md
boson-backend-nats/src/: config.rs  connect.rs  enqueue_rate.rs  fleet.rs  keys.rs  lib.rs  publish.rs  workqueue.rs
boson-backend-nats/tests/: nats_workqueue_dual.rs  nats_workqueue_stream.rs
boson-backend-postgres/: Cargo.toml  README.md
boson-backend-postgres/src/: bootstrap.rs  lib.rs
boson-backend-redis/: Cargo.toml  QUALITY.md  README.md
boson-backend-redis/src/: config.rs  fleet.rs  keys.rs  lib.rs
boson-backend-redis/tests/: redis_fleet_routing.rs
boson-backend-scylla/: Cargo.toml  README.md
boson-backend-scylla/src/: bootstrap.rs  config.rs  enqueue_rate.rs  error_map.rs  lib.rs  schema.rs
boson-backend-scylla/tests/: scylla_queue_backend.rs
boson-backend-sql-common/: Cargo.toml  QUALITY.md  README.md
boson-backend-sql-common/src/: backend.rs  delegate.rs  enqueue_rate.rs  error_map.rs  jobs.rs  leases.rs  lib.rs  macros.rs  queue_impl.rs  row.rs  runs.rs  schema.rs  task_config.rs
boson-backend-sqlite/: Cargo.toml  README.md
boson-backend-sqlite/src/: bootstrap.rs  lib.rs
boson-bench/: Cargo.toml  EXPERIMENTS-ARCHIVE.md  EXPERIMENTS.md  PERFORMANCE_STUDY.md  QUALITY.md  README.md
boson-bench/src/: config.rs  drain.rs  enqueue.rs  experiments.rs  fill_results.rs  hardware.rs  http_bench.rs  load.rs  main.rs  matrix.rs  pass_eval.rs  report.rs  resource_profile.rs  runner.rs  scale.rs  stats.rs  tasks.rs
boson-bench/src/cli/: bench_config.rs  dispatch.rs  hardware_cmd.rs  matrix_cmd.rs  mod.rs  projections_cmd.rs  run_experiment.rs
boson-bench/src/projection/: bd2_aggregate.rs  bd2_common.rs  bd2_fleet_scaling.rs  bd2_multibench_scaling.rs  bd2_shard_scaling.rs  bd2_worker_scaling.rs  be4_aggregate.rs  be4_fleet_scaling.rs  be4_multibench_scaling.rs  be4_scaling.rs  be4_shard_scaling.rs  inputs.rs  mod.rs  model.rs  render.rs  scaling.rs
boson-core/: Cargo.toml  QUALITY.md  README.md
boson-core/src/: error.rs  identity.rs  lib.rs
boson-core/src/backend/: mod.rs  queue_backend.rs
boson-core/src/models/: job.rs  mod.rs  run.rs  task_config.rs
boson-core/src/router/: queue_router.rs
boson-e2e/: Cargo.toml  ENHANCEMENT.md  QUALITY.md  README.md
boson-e2e/src/: lib.rs
boson-e2e/tests/: matrix_smoke.rs  scenarios_full.rs  scenarios_smoke.rs  scylla_cloud.rs
boson-macros/: Cargo.toml  QUALITY.md  README.md
boson-macros/src/: lib.rs  task.rs  task_attrs.rs  task_expand.rs  task_validate.rs
boson-runtime/: Cargo.toml  QUALITY.md  README.md
boson-runtime/src/: bootstrap.rs  boson.rs  builder.rs  global.rs  lib.rs  telemetry.rs
boson-runtime/src/registry/: descriptor.rs  ext.rs  mod.rs  registry_impl.rs
boson-runtime/src/worker/: claim.rs  config.rs  execute.rs  lifecycle.rs  loop_.rs  manual.rs  mod.rs
boson-runtime/tests/: runtime_mem.rs  signature_mismatch.rs
boson-telemetry/: Cargo.toml  QUALITY.md  README.md
boson-telemetry/src/: console.rs  global.rs  lib.rs
boson-testkit/: Cargo.toml  QUALITY.md  README.md
boson-testkit/src/: backend_contract.rs  fixtures.rs  identity.rs  lib.rs  macros.rs  matrix.rs
boson-testkit/src/bootstrap/: env_guard.rs  mod.rs
boson-testkit/src/runner/: dispatch.rs  mod.rs  state.rs  support.rs
boson-testkit/src/runner/steps/: admin.rs  asserts.rs  drain.rs  enqueue.rs  lease.rs  mod.rs  registry.rs  retry.rs
boson-testkit/src/scenario/: catalog.rs  mod.rs  spec.rs  step.rs
boson-testkit/src/scenario/factories/: enqueue.rs  idempotency.rs  lifecycle.rs  mod.rs  rate_limit.rs
boson-testkit/tests/: axum_http_api.rs  backend_mem_contract.rs  backend_nats_contract.rs  backend_nats_fleet_routing.rs  backend_nats_workqueue_dual.rs  backend_nats_workqueue_stream.rs  backend_postgres_contract.rs  backend_redis_contract.rs  backend_redis_fleet_routing.rs  backend_scylla_contract.rs  backend_sqlite_contract.rs  runner_scenarios.rs  runtime_macro_inventory.rs  runtime_mem.rs  runtime_signature_mismatch.rs
boson/examples/: axum_admin.rs  idempotency_and_rate_limit.rs  minimal_enqueue.rs  remote_enqueue.rs  remote_worker.rs  task_macro.rs
boson/examples/shared/: remote_ping.rs
boson/src/: lib.rs  prelude.rs
docs/: VERIFICATION.md  supply-chain.md
infra/broker/: README.md
infra/broker/scripts/: run-bd2-sweep.sh  run-be4-fleet-sweep.sh  run-be4-sweep.sh
infra/native-aws/: README.md
infra/native-aws/broker-fleet/: bootstrap-fleet.sh  bootstrap-n2-cluster.sh  bootstrap-n4-cluster.sh  deploy-all-benches.sh  export-fleet-env.sh  provision-fleet.sh  provision-multibench-fleet.sh  resume-multibench-cells.sh  run-bd2-campaign-aws.sh  run-bd2-claim-path-aws.sh  run-bd2-drain-only-multibench-aws.sh  run-bd2-fleet-sweep-aws.sh  run-bd2-multibench-sweep-aws.sh  run-bd2-phase-e-h-aws.sh  run-bd2-pinning-aws.sh  run-bd2-read-science-aws.sh  run-bd2-redis-multibench-sweep-aws.sh  run-bd2-redis-replay-aws.sh  run-bd2-resume-aws.sh  run-bd2-shard-sweep-aws.sh  run-bd2-worker-sweep-aws.sh  run-be4-cluster-ref-aws.sh  run-be4-multibench-sweep-aws.sh  run-be4-redis-replay-aws.sh  run-cluster-n2-aws.sh  run-cluster-n4-aws.sh  run-fleet-sweep-aws.sh
infra/native-aws/config/: defaults.env
infra/native-aws/lib/: artifact.sh  bench-fleet.sh  hardware.sh  manifest.sh  ssh.sh
infra/postgres/: README.md  docker-compose.yml
scripts/: coverage.sh
(+33 files in other folders)
