[package]
name = "boson-backend-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/boson-backend-mem"
description = "In-memory QueueBackend adapter for tests, CI, and testkit"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { workspace = true }
boson-core = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
boson-testkit = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
