[package]
name = "boson-backend-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/boson-backend-mem"
description = "In-memory QueueBackend adapter for tests, CI, and testkit"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { workspace = true }
boson-core = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
