[package]
name = "boson-backend-nats"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/boson-backend-nats"
description = "NATS JetStream KV QueueBackend adapter for Boson Tier 3"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-nats = "0.38"
async-trait = { workspace = true }
boson-core = { workspace = true }
bytes = "1"
chrono = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
uuid = { workspace = true }

[lints]
workspace = true
