[package]
name = "boson-backend-scylla"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/boson-backend-scylla"
description = "ScyllaDB QueueBackend for Boson"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
boson-core = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
scylla = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

