[package]
name = "boson-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/boson-telemetry"
description = "Boson OpsLog telemetry port"

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
