[package]
name = "boson-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared matrix, scenarios, and bootstrap for boson-e2e and boson-bench"
publish = false

[dependencies]
anyhow = "1"
axum = { workspace = true }
boson-axum = { workspace = true }
boson-backend-mem = { workspace = true }
boson-backend-postgres = { workspace = true }
boson-backend-redis = { workspace = true }
boson-backend-nats = { workspace = true }
boson-backend-scylla = { workspace = true }
boson-backend-sqlite = { workspace = true }
boson-core = { workspace = true }
boson-macros = { workspace = true }
boson-runtime = { workspace = true }
boson-telemetry = { workspace = true }
http-body-util = { workspace = true }
paste = { workspace = true }
quark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
